# CMakeTemplate_CPP

./: CMakeLists.txt  Generate_Mac_Xcode.sh  Generate_Windows_VS2022.bat  Install_Windows_VS2022.bat  README.md  WindowsInstall.bat  main.cpp
Gitignore_Templates/: VisualStudio.gitignore
src/: MyClass.cpp  MyClass.h  main.cpp
src/Utility/: Debug.cpp  Debug.h
